remove scrollbars, fix transaction type selector position

--- a/assets/style.css
+++ b/assets/style.css
@@ -209,9 +209,15 @@ a:focus {
 	width: 100%;
 	height: calc(100vh - 50px - 50px);
 	top: 50px;
-	padding: 20px 20px 120px 20px;
+	padding: 20px 20px 160px 20px;
 	overflow: auto;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
 	transition: transform ease 1s; 
+}
+
+.page::-webkit-scrollbar { 
+    display: none;
 }
 
 .createButton {
@@ -615,11 +621,12 @@ a:focus {
 }
 
 .createTypeBarSelector {
-	z-index: -1;
+	z-index: 2;
 	display: inline-block;
 	position: absolute;
 	width: calc(100% / 3);
 	height: 100%;
+	left: 0;
 	top: 0;
 	transform: translateX(100%);
 	background-color: #ccc;
@@ -678,6 +685,7 @@ a:focus {
 
 .createTypeBarButtonText,
 .createFormButtonIcon {
+	z-index: 3;
 	position: absolute;
 	left: 50%;
 	top: 50%;
